--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /Android/ChemApp/private/
 /Android/ChemApp/.gradle/
 /Android/ChemApp/.nb-gradle/
+/Android/ChemApp/.idea/
 /Android/ChemApp/build/
 /Android/ChemApp/local.properties
