Building, app signing, google play login

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/Android/ChemApp/private/
-/Android/ChemApp/.gradle/
-/Android/ChemApp/.nb-gradle/
-/Android/ChemApp/.idea/
-/Android/ChemApp/build/
-/Android/ChemApp/local.properties
+**/private
+**/.gradle
+**/.nb-gradle
+**/.idea
+**/build
+**/local.properties
+**/chemapp.keystore
