--- a/Android/ChemApp/build.gradle
+++ b/Android/ChemApp/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.+'
     compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:preference-v7:23.+'
+    compile 'com.android.support:preference-v14:23.+'
     compile 'com.android.support:recyclerview-v7:23.+'
     compile 'com.android.support:design:23.+'
     compile "com.google.android.gms:play-services-games:8.+"
